--- a/plib/views/scripts/index/support.phtml
+++ b/plib/views/scripts/index/support.phtml
@@ -19,6 +19,8 @@
     </tr>
 </table><br>
 
+<?php if (pm_Session::getClient()->isAdmin()) : ?>
+
 <h3>Diagnostics</h3>
 
 <table border="0" cellpadding="0" cellspacing="0">
@@ -35,3 +37,13 @@
         <td>v.<?php echo Modules_SpamexpertsExtension_Plesk_ApiClient::getVersion(); ?></td>
     </tr>
 </table>
+
+<?php endif; ?>
+
+<?php if (!empty($this->supportForm)) : ?>
+
+<br><h3>Request support</h3>
+
+<?php echo $this->supportForm; ?>
+
+<?php endif; ?>
