Update SpamFilter API version check

--- a/plib/views/scripts/index/support.phtml
+++ b/plib/views/scripts/index/support.phtml
@@ -30,7 +30,7 @@
     </tr>
     <tr>
         <td><strong>SpamFilter API:</strong></td>
-        <td>rev.<?php echo Modules_SpamexpertsExtension_SpamFilter_Api::getRevision(); ?></td>
+        <td>v.<?php echo Modules_SpamexpertsExtension_SpamFilter_Api::getRevision(); ?></td>
     </tr>
     <tr>
         <td><strong>Plesk API:</strong></td>
